solo-projects/bburnley/piscene/exam01/reverse_bits/2-0-reverse_bits.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1z1r3p16.42.us.org
Darwin 15.6.0 x86_64
$> date
Fri Nov  4 21:35:59 PDT 2016
$> gcc --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 7.3.0 (clang-703.0.31)
Target: x86_64-apple-darwin15.6.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
$> clang --version
Apple LLVM version 7.3.0 (clang-703.0.31)
Target: x86_64-apple-darwin15.6.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2016/piscine-c-exam01/exam_20161105/bburnley

= Git history ==================================================================
$> git -C /var/folders/4y/npgb4kwn17s8rz32k4d1tjf00000gp/T/tmp6d3aws/user log --pretty='%H - %an, %ad : %s'
9bcb4bf505803f1523c08083a768ba42ef57beef - Exam 42, Fri Nov 4 21:33:59 2016 -0700 : Ex03 - I know I'm close on this one, but the octal input isn't something I've worked with before and I don't (yet) know how to interconvert between octal and decimal. :'(
2b50959821925e69b48f770e0f1d0bb4b4ed8d32 - Exam 42, Fri Nov 4 19:32:21 2016 -0700 : Ex01
d59b65bc3707fecd30cd1219a55c3355207d581e - Exam 42, Fri Nov 4 18:18:36 2016 -0700 : Ex00
 
= Collected files ==========================================
$> ls -lAR /var/folders/4y/npgb4kwn17s8rz32k4d1tjf00000gp/T/tmp6d3aws/user
total 8
-rw-r--r--  1 deepthought  deepthought  894 Nov  4 21:36 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought  102 Nov  4 21:36 ft_countdown
drwxr-xr-x  3 deepthought  deepthought  102 Nov  4 21:36 reverse_bits
drwxr-xr-x  3 deepthought  deepthought  102 Nov  4 21:36 rot_13

/var/folders/4y/npgb4kwn17s8rz32k4d1tjf00000gp/T/tmp6d3aws/user/ft_countdown:
total 8
-rw-r--r--  1 deepthought  deepthought  1133 Nov  4 21:36 ft_countdown.c

/var/folders/4y/npgb4kwn17s8rz32k4d1tjf00000gp/T/tmp6d3aws/user/reverse_bits:
total 8
-rw-r--r--  1 deepthought  deepthought  1803 Nov  4 21:36 reverse_bits.c

/var/folders/4y/npgb4kwn17s8rz32k4d1tjf00000gp/T/tmp6d3aws/user/rot_13:
total 8
-rw-r--r--  1 deepthought  deepthought  1362 Nov  4 21:36 rot_13.c
 
= reverse_bits =================================================================
$> gcc -Wextra -Wall -Werror main.c reverse_bits.c -o user_exe 
reverse_bits.c:40:14: error: subscripted value is not an array, pointer, or vector
        val += octet[2] % 8;
               ~~~~~^~
reverse_bits.c:41:15: error: subscripted value is not an array, pointer, or vector
        val += (octet[1] % 8) * 8;
                ~~~~~^~
reverse_bits.c:42:15: error: subscripted value is not an array, pointer, or vector
        val += (octet[0] % 8) * 64;
                ~~~~~^~
3 errors generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
